--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,15 +1,15 @@
 .catalog {
-  padding-top: 32px;
+  padding-top: 15px;
 }
 
 .catalog__title {
   @include container;
-  margin-bottom: 35px;
+  margin-bottom: 28px;
 }
 
 @media (min-width: $tablet-width) {
   .catalog {
-    padding-top: 58px;
+    padding-top: 48px;
     padding-bottom: 35px;
   }
 
@@ -19,6 +19,7 @@
 
   .catalog__title {
     @include container-reset;
+    margin-bottom: 25px;
   }
 }
 
@@ -28,6 +29,11 @@
   }
 
   .catalog {
+    padding-top: 53px;
     padding-bottom: 39px;
+  }
+
+  .catalog__title {
+    margin-bottom: 23px;
   }
 }
