--- a/source/sass/blocks/footer-links.scss
+++ b/source/sass/blocks/footer-links.scss
@@ -1,13 +1,21 @@
 .footer-links {
   padding-top: 39px;
-  padding-bottom: 22px;
+  padding-bottom: 21px;
   background-color: $background-color;
 }
 
 .footer-links__logo {
   display: block;
   text-align: center;
-  margin-bottom: 31px;
+  margin-bottom: 27px;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 .footer-links__logo-image {
@@ -18,8 +26,8 @@
 
 @media (min-width: $tablet-width) {
   .footer-links {
-    padding-top: 58px;
-    padding-bottom: 58px;
+    padding-top: 52px;
+    padding-bottom: 54px;
   }
 
   .footer-links__wrapper {
@@ -31,11 +39,20 @@
   .footer-links__logo {
     margin-bottom: 0;
   }
+
+  .footer-links__social {
+    margin-top: 1px;
+    margin-left: 20px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .footer-links {
-    padding-top: 60px;
-    padding-bottom: 56px;
+    padding-top: 54px;
+    padding-bottom: 53px;
+  }
+
+  .footer-links__social {
+    margin-left: 31px;
   }
 }
