--- a/source/sass/blocks/main-btn.scss
+++ b/source/sass/blocks/main-btn.scss
@@ -9,9 +9,25 @@
   color: $text-color--dark-side;
   background-color: $btn-color;
 
+  &:hover {
+    background-color: $btn-color--hover;
+  }
+
+  &:active {
+    color: $btn-color--active;
+  }
+
   &--gray {
-    background-color: $background-color;
+    background-color: $btn-color--gray;
     color: $text-color;
+  }
+
+  &--gray:hover {
+    background-color: $btn-color--gray-hover;
+  }
+
+  &--gray:active {
+    color: $btn-color--gray-active;
   }
 }
 
