--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,7 +4,7 @@
 }
 
 .site-list__item {
-  padding: 24px 0;
+  padding: 22.5px 0;
   border-top: 1px solid $border-color--light;
   font-size: 20px;
   line-height: 20px;
@@ -32,13 +32,14 @@
 
   .site-list__item {
     flex-grow: 1;
+    max-width: max-content;
     border: none;
     padding-top: 5px;
-    padding-bottom: 10px;
-    margin-left: 5px;
+    padding-bottom: 8px;
+    margin-left: 2px;
     margin-bottom: 5px;
     font-size: 18px;
-    line-height: 25px;
+    line-height: 22px;
     font-weight: 400;
 
     &:last-child {
@@ -47,6 +48,14 @@
 
     &.site-list__item--active {
       border-bottom: 2px solid $menu-decoration;
+    }
+
+    &:not(.site-list__item--active):hover {
+      opacity: 0.6;
+    }
+
+    &:not(.site-list__item--active):active {
+      opacity: 0.3;
     }
   }
 
@@ -73,7 +82,7 @@
   .site-list__item {
     flex-grow: 0;
     font-size: 20px;
-    margin-left: 30px;
+    margin-left: 34px;
 
     &:first-child {
       margin-left: 0;
