--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,16 +4,18 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 280px;
-  padding: 19px 10px 18px 10px;
+  padding: 18px 10px 18px 10px;
   border-top: 1px solid $border-color--dark;
   border-bottom: 1px solid $border-color--dark;
 }
 
 .social__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 25px;
-  height: 25px;
+  height: 27px;
   margin-right: 29px;
-  background-color: $text-color--light-side;
 
   &:nth-of-type(5n),
   &:last-of-type {
@@ -22,6 +24,10 @@
 
   &:nth-of-type(n + 6) {
     margin-top: 15px;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
 
@@ -32,8 +38,8 @@
   }
 
   &--instagram {
-    width: 17px;
-    height: 17px;
+    width: 16px;
+    height: 16px;
   }
 
   &--facebook {
@@ -51,9 +57,9 @@
   }
 
   .social__item {
-    width: 30px;
+    width: max-content;
     height: 30px;
-    margin-right: 24px;
+    margin-right: 28px;
   }
 
   .social__ico {
@@ -82,10 +88,10 @@
   .social__item {
     width: 30px;
     height: 30px;
-    margin-right: 24px;
+    margin-right: 22px;
 
     &:nth-of-type(5n) {
-      margin-right: 24px;
+      margin-right: 22px;
     }
 
     &:nth-of-type(12n) {
