--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,8 +1,10 @@
+$mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1300px;
 $main-font: "Oswald", "Tahoma", sans-serif;
 $arial: "Arial", sans-serif;
 $main-color: #68b738;
+$main-color--dark: #5eaa2f;
 $black: #000000;
 $white: #ffffff;
 $gray--lighter: #f2f2f2;
@@ -13,12 +15,16 @@ $gray--dark: #cccccc;
 $gray--darken: #444444;
 $gray--decor: #dcdcdc;
 $gray--silver: #cdcdcd;
+$gray--white-three: #ebebeb;
+$gray--opacity: rgba(68, 68, 68, 0.3);
+$white--opacity: rgba(255, 255, 255, 0.3);
 $border-color--light: $gray--light;
 $border-color--lighter: $gray--lighter;
 $border-color: $gray;
 $border-color--dark: $gray--dark;
 $border-color--silver: $gray--silver;
 $text-color: $gray--darken;
+$text-color--lighter: $gray--lighter;
 $text-color--light-side: $black;
 $text-color--dark-side: $white;
 $background-color: $gray--lighter;
@@ -30,3 +36,8 @@ $decoration-color: $main-color;
 $menu-decoration: $main-color;
 $menu-decoration--desktop: $white;
 $btn-color: $main-color;
+$btn-color--gray: $gray--lighter;
+$btn-color--hover: $main-color--dark;
+$btn-color--gray-hover: $gray--white-three;
+$btn-color--active: $white--opacity;
+$btn-color--gray-active: $gray--opacity;
