add modifications for items list

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -64,6 +64,7 @@
 
   .contacts__text {
     max-width: 154px;
+    padding-bottom: 4px;
     font-size: 20px;
     line-height: 25px;
   }
@@ -73,7 +74,6 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 155px;
-    height: 79px;
     text-align: right;
   }
 
