--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -5,6 +5,8 @@ $main-font: "Oswald", "Tahoma", sans-serif;
 $arial: "Arial", sans-serif;
 $main-color: #68b738;
 $main-color--dark: #5eaa2f;
+$main-color--darken-first: #65a93c;
+$main-color--darken-second: #63a73a;
 $black: #000000;
 $white: #ffffff;
 $gray--lighter: #f2f2f2;
@@ -31,7 +33,8 @@ $background-color: $gray--lighter;
 $background-color--middle: $gray--middle;
 $background-color--decor: $border-color--dark;
 $background-color--clean: $white;
-$background-color--green-image: $main-color;
+$background-color--green-first: $main-color--darken-first;
+$background-color--green-second: $main-color--darken-second;
 $decoration-color: $main-color;
 $menu-decoration: $main-color;
 $menu-decoration--desktop: $white;
