--- a/source/sass/blocks/about-feed.scss
+++ b/source/sass/blocks/about-feed.scss
@@ -32,25 +32,21 @@
     background-position: center;
   }
 
-  &:nth-child(1)::before {
+  &--substance::before {
     background-image: url("../img/advantage-leaf@1x.png");
   }
 
-  &:nth-child(2)::before {
+  &--water::before {
     background-image: url("../img/advantage-powder@1x.png");
   }
 
-  &:nth-child(3)::before {
+  &--food::before {
     background-image: url("../img/advantage-dining@1x.png");
   }
 
-  &:nth-child(4)::before {
+  &--time::before {
     background-image: url("../img/advantage-clock@1x.png");
   }
-}
-
-.about-feed__text br {
-  display: none;
 }
 
 @media (min-width: $tablet-width) {
@@ -67,9 +63,11 @@
   .about-feed__list {
     display: flex;
     flex-wrap: wrap;
+    counter-reset: section;
   }
 
   .about-feed__item {
+    counter-increment: section;
     max-width: 245px;
     width: 100%;
     min-height: 231px;
@@ -91,6 +89,7 @@
     }
 
     &::after {
+      content: counter(section);
       position: absolute;
       top: 0;
       right: 0;
@@ -100,30 +99,10 @@
       line-height: 201px;
       z-index: -1;
     }
-
-    &:nth-child(1)::after {
-      content: "1";
-    }
-
-    &:nth-child(2)::after {
-      content: "2";
-    }
-
-    &:nth-child(3)::after {
-      content: "3";
-    }
-
-    &:nth-child(4)::after {
-      content: "4";
-    }
   }
 
   .about-feed__text {
     padding-top: 110px;
-  }
-
-  .about-feed__text br {
-    display: block;
   }
 }
 
