--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,10 +1,9 @@
 .banner {
   padding-top: 27px;
   padding-bottom: 11px;
-  background-image: url("../img/index-background-mobile@1x.jpg"), linear-gradient(to bottom, $background-color--green-image 50%, transparent 50%);
+  background-image: url("../img/index-background-mobile@1x.jpg"), linear-gradient(to bottom, transparent 62.5%, $background-color--clean 62.5%), linear-gradient(to right, $background-color--green-first 62.5%, $background-color--green-second 62.5%);
   background-position: center top;
   background-repeat: no-repeat;
-  background-size: 100% 305px;
 }
 
 .banner__title {
