--- a/source/sass/blocks/сategories.scss
+++ b/source/sass/blocks/сategories.scss
@@ -35,7 +35,7 @@
     background-position: center;
   }
 
-  &:nth-child(1)::after {
+  &--slim::after {
     top: 22px;
     left: 30px;
     width: 35px;
@@ -43,7 +43,7 @@
     background-image: url("../img/icon-cat-slim.svg");
   }
 
-  &:nth-child(2)::after {
+  &--mass::after {
     top: 35px;
     left: 13px;
     width: 67px;
@@ -117,14 +117,14 @@
       height: 200px;
     }
 
-    &:nth-child(1)::after {
+    &--slim::after {
       top: 80px;
       left: 475px;
       width: 141px;
       height: 194px;
     }
 
-    &:nth-child(2)::after {
+    &--mass::after {
       top: 135px;
       left: 412px;
       width: 268px;
@@ -197,14 +197,14 @@
       height: 100px;
     }
 
-    &:nth-child(1)::after {
+    &--slim::after {
       top: 41px;
       left: 65px;
       width: 71px;
       height: 97px;
     }
 
-    &:nth-child(2)::after {
+    &--mass::after {
       top: 69px;
       left: 34px;
       width: 134px;
