--- a/source/sass/blocks/form-list.scss
+++ b/source/sass/blocks/form-list.scss
@@ -3,9 +3,15 @@
 }
 
 .form-list__item {
-  margin-bottom: 26px;
+  margin-bottom: 25px;
 
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .form-list__item {
+    margin-bottom: 29px;
   }
 }
