--- a/source/sass/blocks/аdditional-list.scss
+++ b/source/sass/blocks/аdditional-list.scss
@@ -14,7 +14,7 @@
 
 @media (min-width: $tablet-width) {
   .аdditional-list__item {
-    padding: 28px 38px;
+    padding: 26px 36px 26px 38px;
     border: 1px solid $border-color--silver;
     border-bottom: none;
 
@@ -26,7 +26,7 @@
 
 @media (min-width: $desktop-width) {
   .аdditional-list__item {
-    padding: 16px 0 15px 0;
+    padding: 19px 0 15px 2px;
     border-right: 0;
     border-left: 0;
     border-top: 1px solid $border-color--silver;
