--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -7,31 +7,44 @@ $main-color: #68b738;
 $main-color--dark: #5eaa2f;
 $main-color--darken-first: #65a93c;
 $main-color--darken-second: #63a73a;
+$red--light: #ff8282;
 $black: #000000;
+$black--light: #444444;
 $white: #ffffff;
 $gray--lighter: #f2f2f2;
 $gray--light: #ededed;
 $gray: #e6e6e6;
 $gray--middle: #eaeaea;
 $gray--dark: #cccccc;
+$gray--dark-lighter: #bebebe;
+$gray--dark-light: #989898;
 $gray--darken: #444444;
 $gray--decor: #dcdcdc;
 $gray--silver: #cdcdcd;
+$gray--silver-dark: #bababa;
 $gray--white-three: #ebebeb;
 $gray--opacity: rgba(68, 68, 68, 0.3);
+$black--opacity: rgba(0, 0, 0, 0.15);
+$black--opacity-lighter: rgba(0, 0, 0, 0.25);
+$black--opacity-light: rgba(0, 0, 0, 0.3);
 $white--opacity: rgba(255, 255, 255, 0.3);
 $border-color--light: $gray--light;
 $border-color--lighter: $gray--lighter;
 $border-color: $gray;
 $border-color--dark: $gray--dark;
+$border-color--dark-lighter: $gray--dark-lighter;
+$border-color--dark-light: $gray--dark-light;
 $border-color--silver: $gray--silver;
+$border-color--silver-dark: $gray--silver-dark;
+$border-color--decore: $gray--decor;
+$border-color--white: $white;
 $text-color: $gray--darken;
 $text-color--lighter: $gray--lighter;
 $text-color--light-side: $black;
 $text-color--dark-side: $white;
 $background-color: $gray--lighter;
 $background-color--middle: $gray--middle;
-$background-color--decor: $border-color--dark;
+$background-color--decor: $gray--decor;
 $background-color--clean: $white;
 $background-color--green-first: $main-color--darken-first;
 $background-color--green-second: $main-color--darken-second;
@@ -44,3 +57,9 @@ $btn-color--hover: $main-color--dark;
 $btn-color--gray-hover: $gray--white-three;
 $btn-color--active: $white--opacity;
 $btn-color--gray-active: $gray--opacity;
+$btn-shadow: $black--opacity;
+$btn-shadow--hover: $black--opacity-lighter;
+$btn-shadow--active: $black--opacity-light;
+$placeholder-color: $black--light;
+$fild-color--active: $black--light;
+$fild-color--error: $red--light;
