--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 65px;
-  padding-bottom: 43px;
+  padding-bottom: 41px;
   background-color: $background-color--green-second;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
@@ -14,7 +14,7 @@
 .special__ico {
   width: 56px;
   height: 61px;
-  margin-bottom: 56px;
+  margin-bottom: 61px;
 }
 
 .special__text {
@@ -37,11 +37,14 @@
   }
 
   .special__ico {
+    margin-top: -8px;
+    margin-right: 95px;
     margin-bottom: 0;
   }
 
   .special__text {
-    margin-top: 10px;
+    margin-top: 7px;
+    margin-right: 29px;
     text-align: left;
   }
 }
@@ -55,12 +58,14 @@
   }
 
   .special__ico {
-    margin-top: 65px;
+    margin-top: 68px;
+    margin-right: 0;
   }
 
   .special__text {
-    margin-bottom: 43px;
     margin-top: 0;
+    margin-right: 1px;
+    margin-bottom: 42px;
     text-align: center;
   }
 }
