--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "vars.scss";
 @import "mixins.scss";
 @import "global.scss";
+@import "blocks/main.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/main-btn.scss";
 @import "blocks/main-title.scss";
@@ -11,6 +12,7 @@
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
 @import "blocks/form-list.scss";
+@import "blocks/title-decor.scss";
 @import "blocks/container.scss";
 @import "blocks/banner.scss";
 @import "blocks/сategories.scss";
