--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -32,12 +32,12 @@
   .special {
     flex-direction: row;
     justify-content: space-around;
+    align-items: flex-start;
     min-height: 200px;
-    padding: 0;
+    padding-top: 66px;
   }
 
   .special__ico {
-    margin-top: -8px;
     margin-right: 95px;
     margin-bottom: 0;
   }
@@ -53,8 +53,10 @@
   .special {
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     min-width: 245px;
     min-height: 100%;
+    padding: 0;
   }
 
   .special__ico {
