--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -31,6 +31,7 @@
   width: 124px;
   min-height: 56px;
   border: 1px solid $border-color--dark;
+  border-radius: 3px;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 24px;
@@ -110,19 +111,18 @@
   background-color: $background-color--clean;
   margin-right: 18px;
   margin-left: 18px;
-  cursor: pointer;
+}
 
-  &::before {
-    content: "";
-    position: absolute;
-    left: 5px;
-    top: 50%;
-    width: 35px;
-    height: 6px;
-    background-color: $decoration-color;
-    border-radius: 3px;
-    transform: translateY(-50%);
-  }
+.result__range-trigger {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  width: 35px;
+  height: 6px;
+  background-color: $decoration-color;
+  border-radius: 3px;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 @media (min-width: $tablet-width) {
@@ -143,7 +143,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 221px;
+    margin-bottom: 92px;
   }
 
   .result__text {
@@ -187,9 +187,9 @@
   }
 
   .result__cat-wrapper {
-    max-height: 465px;
-    padding-bottom: 75px;
-    background-image: linear-gradient(to right, $background-color 50%, $background-color--middle 50%);
+    padding-bottom: 70px;
+    background-image: linear-gradient(to bottom, $background-color--clean 22.1%, transparent 22.1%),
+      linear-gradient(to right, $background-color 50%, $background-color--middle 50%);
   }
 
   .result__image-wrapper {
@@ -200,8 +200,6 @@
 
   .result__image {
     width: 636px;
-    height: 517px;
-    margin-top: -169px;
   }
 
   .result__range-wrapper {
@@ -223,24 +221,24 @@
     margin-right: 22px;
     margin-left: 22px;
     background-color: $background-color--decor;
+  }
 
-    &::before {
-      width: 34px;
-      height: 34px;
-      border: 1px solid $border-color--decore;
-      top: 50%;
-      left: 46.5%;
-      border-radius: 50%;
-      box-shadow: 0 2px 5px $btn-shadow;
-      background-color: transparent;
-      background-image: radial-gradient(circle, $decoration-color 3.5px, $background-color--clean 4.5px);
-    }
+  .result__range-trigger {
+    width: 34px;
+    height: 34px;
+    border: 1px solid $border-color--decore;
+    top: 50%;
+    left: 46.5%;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px $btn-shadow;
+    background-color: transparent;
+    background-image: radial-gradient(circle, $decoration-color 3.5px, $background-color--clean 4.5px);
 
-    &:hover::before {
+    &:hover {
       box-shadow: 0 3px 5px $btn-shadow--hover;
     }
 
-    &:active::before {
+    &:active {
       border: 2px solid $decoration-color;
       box-shadow: 0 4px 5px $btn-shadow--active;
     }
@@ -290,14 +288,11 @@
   }
 
   .result__cat-wrapper {
-    padding-top: 76px;
-    padding-bottom: 75px;
-    margin-top: -10px;
     background-image: linear-gradient(to right, $background-color 53.8%, $background-color--middle 53.8%);
   }
 
   .result__image-wrapper {
-    margin-top: -95px;
+    margin-top: -144px;
     margin-bottom: 36px;
   }
 
