--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -119,8 +119,9 @@
   top: 50%;
   width: 35px;
   height: 6px;
-  background-color: $decoration-color;
+  border: none;
   border-radius: 3px;
+  background-color: $decoration-color;
   transform: translateY(-50%);
   cursor: pointer;
 }
