--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,6 +1,8 @@
 $mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1300px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
 $main-font: "Oswald", "Tahoma", sans-serif;
 $arial: "Arial", sans-serif;
 $main-color: #68b738;
