--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -100,6 +100,14 @@
     }
   }
 
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    .header {
+    &--big-bg::before {
+      background-image: url("../img/index-background-desktop@2x.jpg");
+    }
+  }
+  }
+
   .header__wrapper {
     @include container--desktop;
     align-items: flex-start;
